// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`import-as-as.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
import { foo as as } from "foo";
import { as as foo } from "foo";

=====================================output=====================================
// @flow
import { foo as as } from "foo";
import { as as foo } from "foo";

================================================================================
`;

exports[`import-as-as2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
import { as as as } from "foo";

=====================================output=====================================
// @flow
import { as as as } from "foo";

================================================================================
`;

exports[`type-import-as-as.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import {type foo as as} from "foo";

=====================================output=====================================
import { type foo as as } from "foo";

================================================================================
`;
